--- a/WebContent/VAADIN/themes/reindeer/styles.css
+++ b/WebContent/VAADIN/themes/reindeer/styles.css
@@ -3208,6 +3208,28 @@ td.v-datefield-calendarpanel-nextyear {
   background-position: center -846px;
 }
 
+/* Small style */
+.v-splitpanel-hsplitter-small,
+.v-splitpanel-hsplitter-small-locked {
+	width: 1px;
+	background: #949698;
+}
+.v-splitpanel-vsplitter-small,
+.v-splitpanel-vsplitter-small-locked {
+	height: 1px;
+	background: #949698;
+}
+.v-splitpanel-hsplitter-small div {
+	width: 3px;
+	margin-left: -2px;
+	background: transparent;
+}
+.v-splitpanel-vsplitter-small div {
+	height: 3px;
+	margin-top: -2px;
+	background: transparent;
+}
+
 /* ./WebContent/VAADIN/themes/reindeer/table/table.css */
 .v-table-header-wrap {
 	border-color: #c2c3c4;
