Black window style for Reindeer theme.
Multiple other fixes to Reindeer theme. Some fixes to base and Runo themes involving window styles.

svn changeset:7988 branch:6.0

--- a/WebContent/VAADIN/themes/base/styles.css
+++ b/WebContent/VAADIN/themes/base/styles.css
@@ -1444,6 +1444,7 @@ div.v-window-header {
 }
 .v-window-footer {
 	overflow: hidden;
+	zoom: 1;
 }
 .v-window-resizebox {
 	display: inline; /* fix IE6 double float margin bug */
@@ -1453,6 +1454,19 @@ div.v-window-header {
 	cursor: se-resize;
 	background: #ddd;
 	overflow: hidden;
+}
+/* IE7 fails with the float:right */
+.v-ie7 .v-window-footer {
+	position: relative;
+	height: 10px;
+}
+.v-ie7 .v-window-resizebox {
+	position: absolute;
+	float: none;
+	right: 0;
+}
+.v-ie7 .v-window-footer-noresize {
+	height: 0;
 }
 .v-window-resizebox-disabled {
 	cursor: default;
