--- a/WebContent/VAADIN/themes/runo/window/window.css
+++ b/WebContent/VAADIN/themes/runo/window/window.css
@@ -32,12 +32,15 @@
 .v-window-footer {
 	height: 8px;
 	margin-left: 9px;
-	background: transparent url(img/bottom-right.png) no-repeat right top;  
+	background: transparent url(img/bottom-right.png) no-repeat right top;
+	overflow: visible;
 }
 .v-ie7 .v-window-footer {
 	position: relative;
+	overflow: visible;
 }
-.v-window-resizebox {
+.v-window-resizebox,
+.v-ie7 .v-window-resizebox {
 	position: absolute; /* Needed to position the element over ScrollPanel, which is relatively positioned */
 	right: 5px;
 	width: 10px;
