--- a/WebContent/VAADIN/themes/base/window/window.css
+++ b/WebContent/VAADIN/themes/base/window/window.css
@@ -34,6 +34,7 @@ div.v-window-header {
 }
 .v-window-footer {
 	overflow: hidden;
+	zoom: 1;
 }
 .v-window-resizebox {
 	display: inline; /* fix IE6 double float margin bug */
@@ -43,6 +44,19 @@ div.v-window-header {
 	cursor: se-resize;
 	background: #ddd;
 	overflow: hidden;
+}
+/* IE7 fails with the float:right */
+.v-ie7 .v-window-footer {
+	position: relative;
+	height: 10px;
+}
+.v-ie7 .v-window-resizebox {
+	position: absolute;
+	float: none;
+	right: 0;
+}
+.v-ie7 .v-window-footer-noresize {
+	height: 0;
 }
 .v-window-resizebox-disabled {
 	cursor: default;
