--- a/WebContent/VAADIN/themes/reindeer/styles.css
+++ b/WebContent/VAADIN/themes/reindeer/styles.css
@@ -1444,6 +1444,7 @@ div.v-window-header {
 }
 .v-window-footer {
 	overflow: hidden;
+	zoom: 1;
 }
 .v-window-resizebox {
 	display: inline; /* fix IE6 double float margin bug */
@@ -1453,6 +1454,19 @@ div.v-window-header {
 	cursor: se-resize;
 	background: #ddd;
 	overflow: hidden;
+}
+/* IE7 fails with the float:right */
+.v-ie7 .v-window-footer {
+	position: relative;
+	height: 10px;
+}
+.v-ie7 .v-window-resizebox {
+	position: absolute;
+	float: none;
+	right: 0;
+}
+.v-ie7 .v-window-footer-noresize {
+	height: 0;
 }
 .v-window-resizebox-disabled {
 	cursor: default;
@@ -2141,6 +2155,13 @@ div > .v-button.v-button-link:active .v-button-caption,
 .v-Notification {
 	font-family: Helvetica, Arial, "Lucida Grande", Geneva, Tahoma, Verdana, sans-serif;
 }
+/* Fonts on black background */
+.v-app .black,
+.v-window-black,
+.v-popupview-popup .black {
+	color: #c9ccce;
+	text-shadow: #000 0 0 1px;
+}
 .v-errorindicator {
 	width: 13px;
 	height: 16px;
@@ -2253,6 +2274,11 @@ span.v-datefield-calendarpanel-month {
 .v-datefield-day .v-datefield-calendarpanel-month,
 .v-datefield-full .v-datefield-calendarpanel-month {
 	width: 124px;
+}
+.v-datefield-month,
+.v-datefield-day,
+.v-datefield-full {
+	min-width: 240px;
 }
 .v-datefield-year .v-datefield-calendarpanel {
 	width: 100px;
@@ -2524,7 +2550,10 @@ td.v-datefield-calendarpanel-nextyear {
 .black span.v-datefield-calendarpanel-month {
 	border-left: 1px solid #333638;
 	border-right: 1px solid #232527;
+	color: #c9ccce;
 	text-shadow: #000 0 -1px 0;
+	padding: 4px 10px 1px 10px;
+	margin-top: 0;
 }
 .black .v-datefield-calendarpanel-prevyear button,
 .black .v-datefield-calendarpanel-nextyear button,
@@ -2607,16 +2636,6 @@ td.v-datefield-calendarpanel-nextyear {
   background-image: url(common/img/black-vertical-sprites.png);
   -background-image: url(common/img/black-vertical-sprites-ie6.png);
   background-position: right -294px;
-}
-/* IE fails to position backgrounds inside table element */
-.v-ie .black .v-datefield-calendarpanel-weekdays td {
-	background: url(datefield/img/weekday-bg-black.png) repeat-x;
-}
-.v-ie .black .v-datefield-calendarpanel .v-first {
-	background: url(datefield/img/weekday-first-black.png) no-repeat;
-}
-.v-ie .black .v-datefield-calendarpanel .v-last {
-	background: url(datefield/img/weekday-last-black.png) no-repeat right top;
 }
 
 /* ./WebContent/VAADIN/themes/reindeer/formlayout/formlayout.css */
@@ -2714,6 +2733,9 @@ td.v-datefield-calendarpanel-nextyear {
 	color: #fff;
 	text-shadow: rgba(0,0,0,.8) 0 2px 2px;
 }
+.black .v-label-light {
+	color: #72787c;
+}
 
 /* ./WebContent/VAADIN/themes/reindeer/layouts/layouts.css */
 .v-orderedlayout-margin-top,
@@ -2753,8 +2775,6 @@ td.v-datefield-calendarpanel-nextyear {
 .v-horizontallayout-black,
 .v-orderedlayout-black {
 	background: #16181a url(layouts/img/black-bg.png) repeat-x;
-	color: #c9ccce;
-	text-shadow: #000 0 0 1px;
 }
 
 /* ./WebContent/VAADIN/themes/reindeer/notification/notification.css */
@@ -3057,6 +3077,7 @@ td.v-datefield-calendarpanel-nextyear {
 }
 .v-app .black .v-filterselect-input,
 .v-window .black .v-filterselect-input,
+.v-window-black .v-filterselect-input,
 .v-popupview-popup .black .v-filterselect-input {
 	color: #c9ccce;
   background-image: url(common/img/black-vertical-sprites.png);
@@ -3612,6 +3633,7 @@ input.v-textfield-prompt {
 	text-shadow: #000 0 0 1px;
 }
 .v-app .black .v-textfield-focus,
+.v-window-black .v-textfield-focus,
 .v-window .black .v-textfield-focus,
 .v-popupview-popup .black .v-textfield-focus {
 	border-color: #4e6a80;
@@ -3708,6 +3730,13 @@ input.v-textfield-readonly,
 .v-window-wrap {
 	border: 1px solid #808386;
 }
+/* IE6 needs border on the outer element */
+.v-ie6 .v-window {
+	border: 1px solid #808386;
+}
+.v-ie6 .v-window-wrap {
+	border: none;
+}
 .v-sa .v-window-wrap,
 .v-ff3 .v-window-wrap,
 .v-op .v-window-wrap {
@@ -3746,8 +3775,11 @@ input.v-textfield-readonly,
   -background-image: url(common/img/vertical-sprites-ie6.png);
   background-position: left -1257px;
 }
-.v-ie6 .v-window-footer {
-	zoom: 1;
+.v-ie7 .v-window-footer {
+	height: 15px;
+}
+.v-ie7 .v-window-footer-noresize {
+	height: 0;
 }
 .v-window-closebox {
 	top: 12px;
@@ -3774,4 +3806,84 @@ input.v-textfield-readonly,
 }
 .v-window-modalitycurtain {
 	background: #56595b;
+}
+
+
+
+
+
+/**
+ Black window -----------------------------
+**/
+
+.v-window-black .v-window-wrap {
+	border-color: #2e3030;
+	border-radius: 8px;
+	-webkit-border-radius: 8px;
+	-moz-border-radius: 8px;
+	overflow: hidden;
+}
+.v-sa .v-window-black .v-window-wrap,
+.v-ff3 .v-window-black .v-window-wrap,
+.v-op .v-window-black .v-window-wrap {
+	border-color: rgba(0,0,0,.9);
+}
+.v-window-black .v-window-wrap2 {
+	background-color: #0b0e0f;
+	-moz-border-radius: 8px;
+}
+.v-sa .v-window-black .v-window-wrap2,
+.v-ff3 .v-window-black .v-window-wrap2,
+.v-op .v-window-black .v-window-wrap2 {
+	background-color: rgba(11,14,15,.9);
+}
+.v-window-black .v-window-outerheader {
+	height: auto;
+	padding: 0;
+	background: transparent;
+}
+.v-window-black .v-window-header {
+	height: auto;
+	padding: 7px 0 7px 0;
+	height: 15px;
+	font-size: 12px;
+	font-weight: normal;
+	color: #dddfe1;
+	background: transparent repeat-x;
+  background-image: url(common/img/black-vertical-sprites.png);
+  -background-image: url(common/img/black-vertical-sprites-ie6.png);
+  background-position: left -549px;
+	text-align: center;
+	-moz-border-radius-topright: 8px;
+	-moz-border-radius-topleft: 8px;
+}
+.v-window-black .v-window-closebox {
+	top: 8px;
+}
+.v-window-black .v-window-footer {
+	background: transparent;
+}
+.v-window-black .v-window-resizebox {
+	background: transparent no-repeat;
+  background-image: url(common/img/black-vertical-sprites.png);
+  -background-image: url(common/img/black-vertical-sprites-ie6.png);
+  background-position: left -578px;
+	width: 14px;
+	height: 14px;
+}
+.v-ie6 .v-window-black .v-window-resizebox {
+  background-image: url(common/img/black-vertical-sprites.png);
+  -background-image: url(common/img/black-vertical-sprites-ie6.png);
+  background-position: left -592px;
+}
+.v-ie6 .v-window-black .v-window-contents {
+	background: transparent url(window/img/black/content-bg-ie6.png) repeat-x;
+}
+
+/* Must be last to make this image last in the sprites */
+.v-window-black .v-window-contents {
+	background: transparent repeat-x;
+  background-image: url(common/img/black-vertical-sprites.png);
+  -background-image: url(common/img/black-vertical-sprites-ie6.png);
+  background-position: left -606px;
 }
